Images-Verzeichnis angelegt, Verzeichnis aufgeraeumt

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<link rel="apple-touch-icon" href="firefighter.png"/>
+<link rel="apple-touch-icon" href="images/firefighter.png"/>
 <head>
 <title>OffSpick - Übersicht</title>
 <meta charset="utf-8">
