--- a/Teaser/baugeschaeft.html
+++ b/Teaser/baugeschaeft.html
@@ -25,7 +25,7 @@ function wechseln (bild)
 
 <table width="654" border="0" align="center">
   <tr>
-    <td width="121"><img src="pictures/firefighter.png" width="80" height="80" alt="FireFighter"><br></td>
+    <td width="121"><img src="images/firefighter.png" width="80" height="80" alt="FireFighter"><br></td>
     <td width="523"><h1>OffSpick (<strong>Off</strong>izier <strong>Spick</strong> - App)</h1></td>
   </tr>
 </table>
@@ -45,7 +45,7 @@ function wechseln (bild)
       
         Michael Ott @ ZHAW 2012</td>
     <td width="10">&nbsp;</td>
-    <td width="270"><img src="pictures/app/baugeschaeft.png" width="270" height="488" border="0" usemap="#Map"></td>
+    <td width="270"><img src="images/app/baugeschaeft.png" width="270" height="488" border="0" usemap="#Map"></td>
   </tr>
 </table>
 
