--- a/webapp/index.html
+++ b/webapp/index.html
@@ -26,16 +26,16 @@
 
 <div data-role="page" id="loginForm" data-rel="dialog" data-add-back-btn="false">
   <div data-role="header">
-    <h1>Benutzer anmelden</h1>
+    <h1>Login</h1>
   </div>
   <div data-role="content">
     <div data-role="fieldcontain">
       <label for="user">Benutzer:</label>
-      <input type="text" name="user" id="user" value="" />
+      <input type="text" name="user" id="user" value=""/>
     </div>
     <div data-role="fieldcontain">
       <label for="pw">Passwort:</label>
-      <input type="password" name="pw" id="pw" value="" />
+      <input type="password" name="pw" id="pw" value=""/>
     </div>
     <button id="loginBtn">Speichern</button>
   </div>
