--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML>
 <html>
-<link rel="apple-touch-icon" href="images/firefighter.png"/>
 <head>
+<link rel="apple-touch-icon" href="images/firefighter.png"/>
+
 <title>OffSpick - Übersicht</title>
 <meta charset="utf-8">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-<script src="http://code.jquery.com/jquery-1.8.2.min.js" charset="utf-8"></script>
+
+<link rel="stylesheet" href="css/jquerymobile120.css" />
+<script src="js/jquery183.js" charset="utf-8"></script>
 <script src="js/app.js" charset="utf-8"></script>
-<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js" charset="utf-8"></script>
+<script src="js/jquerymobile120.js" charset="utf-8"></script>
 </head>
 <body>
 
